Ajustes en CTA de la home

--- a/src/components/FinalCTASection.astro
+++ b/src/components/FinalCTASection.astro
@@ -20,7 +20,7 @@
       /* --- Estilos para el Wrapper Principal --- */
       .final-cta-wrapper {
           background-color: var(--primary-color); /* Fondo de color primario */
-          padding-bottom: 2.5rem; /* Un poco más abajo para el botón */
+          padding-bottom: 0rem; /* Un poco más abajo para el botón */
           color: #fff; /* Color de texto por defecto para esta sección */
       }
   
@@ -33,6 +33,7 @@
       .cta-title {
           font-size: clamp(1.8rem, 4vw, 2.5rem);
           color: #fff; /* Asegura blanco */
+          margin-top: 0;
           margin-bottom: 1rem;
           font-weight: 700;
           line-height: 1.3;
@@ -70,9 +71,9 @@
   
 
       :global(.section-padding) {
-         /* Asegura que exista o defínelo globalmente */
-         padding-top: 0rem; */
-         padding-bottom: 0rem; */
-      }
+    /* Asegura que exista o defínelo globalmente */
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+}
   
   </style>
