Inicializando La Bestia

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon/components';
 import { Image } from 'astro:assets';
 import experts from '../../src/assets/images/experts.png';
 import bridge from '../../src/assets/images/bridge.png';
-// Importa una imagen conceptual para la sección "Story" si la tienes
+// Importa una imagen conceptual para la sección "Story" si la tienes.
 // import storyImage from '../assets/images/about-story-concept.png'; // Ejemplo
 // Importa una imagen para la sección "Team" si la tienes
 // import teamImage from '../assets/images/about-team-concept.png'; // Ejemplo
